test/tests/errors/error-class-cannot-access-private4.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        private var x: int = 1;
        public func y(): T {
            this
        }
    }

    output (new T()).y().x;
}